Actualización final proyecto