@@ -4,17 +4,16 @@ import com.bank.management.dto.CuentaRequestDTO;
 import com.bank.management.dto.CuentaResponseDTO;
 import com.bank.management.entity.CuentaBancaria;
 import com.bank.management.entity.Usuario;
+import com.bank.management.exception.*;
 import com.bank.management.mapper.CuentaBancariaMapper;
 import com.bank.management.repository.CuentaBancariaRepository;
 import com.bank.management.repository.UsuarioRepository;
-import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.web.server.ResponseStatusException;
 
+import java.math.BigDecimal;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 public class CuentaBancariaServiceImpl implements CuentaBancariaService {
@@ -33,54 +32,100 @@ public class CuentaBancariaServiceImpl implements CuentaBancariaService {
 
     @Override
     @Transactional
-    public CuentaResponseDTO guardar(CuentaRequestDTO dto) {
-        if (dto == null || dto.getUsuarioId() == null) {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "usuarioId es obligatorio");
-        }
-
+    public CuentaResponseDTO guardarCuenta(CuentaRequestDTO dto) {
         // 1. Buscar usuario
         Usuario usuario = usuarioRepository.findById(dto.getUsuarioId())
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Usuario no encontrado"));
+                .orElseThrow(() -> new UsuarioNotFoundException(dto.getUsuarioId()));
 
-        // 2. Crear cuenta desde mapper (saldo y usuario)
-        CuentaBancaria cuenta = cuentaBancariaMapper.toEntity(usuario);
+        // 2. Validar duplicado
+        if (cuentaBancariaRepository.existsByUsuarioIdAndTipoCuenta(dto.getUsuarioId(), dto.getTipoCuenta())) {
+            throw new DuplicatedDataException(
+                    "Cuenta",
+                    "El usuario con id " + dto.getUsuarioId() +
+                            " ya tiene una cuenta de tipo " + dto.getTipoCuenta()
+            );
+        }
 
-        // 3. Generar numeroCuenta único (12 chars) y asignar
+        // 3. Generar número único
         String numero;
         do {
             numero = generarNumeroCuenta();
         } while (cuentaBancariaRepository.existsByNumeroCuenta(numero));
+
+        // 4. Crear cuenta
+        CuentaBancaria cuenta = new CuentaBancaria();
+        cuenta.setUsuario(usuario);
+        cuenta.setTipoCuenta(dto.getTipoCuenta());
+        cuenta.setSaldo(dto.getSaldoInicial());
         cuenta.setNumeroCuenta(numero);
 
-        // 4. Guardar y devolver DTO
-        CuentaBancaria saved = cuentaBancariaRepository.save(cuenta);
-        return cuentaBancariaMapper.toDto(saved);
+        cuenta = cuentaBancariaRepository.save(cuenta);
+
+        // 5. Retornar DTO usando el mapper
+        return cuentaBancariaMapper.toDto(cuenta);
     }
+
+
 
     @Override
     public List<CuentaResponseDTO> obtenerTodas() {
         return cuentaBancariaRepository.findAll()
                 .stream()
                 .map(cuentaBancariaMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public CuentaResponseDTO obtenerPorId(Long id) {
         return cuentaBancariaRepository.findById(id)
                 .map(cuentaBancariaMapper::toDto)
-                .orElse(null);
+                .orElseThrow(() -> new CuentaNotFoundException(id));
+    }
+
+    @Override
+    public CuentaResponseDTO actualizarCuenta(Long id, CuentaRequestDTO dto) {
+        CuentaBancaria existente = cuentaBancariaRepository.findById(id)
+                .orElseThrow(() -> new CuentaNotFoundException(id));
+
+        cuentaBancariaMapper.updateEntity(dto, existente);
+        if(dto.getUsuarioId()!=null) {
+        Usuario usuario = usuarioRepository.findById(dto.getUsuarioId())
+        .orElseThrow(() -> new UsuarioNotFoundException(dto.getUsuarioId()));
+        existente.setUsuario(usuario);
+        }
+
+        CuentaBancaria actualizada =
+                cuentaBancariaRepository.save(existente);
+        return cuentaBancariaMapper.toDto(actualizada);
+    }
+
+
+    @Override
+    public void retirar(Long idCuenta, BigDecimal monto) {
+        CuentaBancaria cuenta = cuentaBancariaRepository.findById(idCuenta)
+                .orElseThrow(() -> new CuentaNotFoundException(idCuenta));
+
+        if (monto == null || monto.compareTo(BigDecimal.ZERO) <= 0) {
+            throw new IllegalArgumentException("El monto debe ser mayor a 0");
+        }
+
+        if (cuenta.getSaldo().compareTo(monto) < 0) {
+            throw new SaldoInsuficienteException(cuenta.getSaldo(), monto);
+        }
+
+        cuenta.setSaldo(cuenta.getSaldo().subtract(monto));
+        cuentaBancariaRepository.save(cuenta);
     }
 
     @Override
     public void eliminar(Long id) {
+        if (!cuentaBancariaRepository.existsById(id)) {
+            throw new CuentaNotFoundException(id);
+        }
         cuentaBancariaRepository.deleteById(id);
     }
 
-    // Helper
     private String generarNumeroCuenta() {
-        // genera 12 caracteres hex sin guiones (puedes ajustar longitud 10-20)
         return UUID.randomUUID().toString().replace("-", "").substring(0, 12);
     }
 }
-
